--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,37 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
+    <nav class="navigation">
+        <p class="brand">Analytica</p>
+        <ul>
+            <li>About us</li>
+            <li>Strategy</li>
+            <li>Prices</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+    <section class="about-us-banner">
         <h1>All Your Business Data in One Place</h1>
         <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
             analytics tools.</h3>
-    </div>
-</body>
-</html>
+    
+        <div class="article-wrapper">
+            <article class="article">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut consequatur deleniti ea excepturi fugit
+                    labore libero maxime, minima, minus molestiae obcaecati placeat quidem quisquam reprehenderit rerum,
+                    suscipit tempora tempore.</p>
+            </article>
+            <article class="article">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut consequatur deleniti ea excepturi fugit
+                    labore libero maxime, minima, minus molestiae obcaecati placeat quidem quisquam reprehenderit rerum,
+                    suscipit tempora tempore.</p>
+            </article>
+            <article class="article">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut consequatur deleniti ea excepturi fugit
+                    labore libero maxime, minima, minus molestiae obcaecati placeat quidem quisquam reprehenderit rerum,
+                    suscipit tempora tempore.</p>
+            </article>
+        </div>
+    </section>
+    </body>
+    </html>
